--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Pagina Inicial</h1>
+    <p>Vendas = $5000.00</p>
     <a href="index.html">Ir para a Pagina inicial</a>
 </body>
 </html>
